--- a/Clases/Clases.csproj
+++ b/Clases/Clases.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="CodigoJuego.cs" />
     <Compile Include="Menu.cs" />
+    <Compile Include="PruebaPIPAS.cs" />
     <Compile Include="Win32API.cs" />
   </ItemGroup>
   <ItemGroup>
